# ash-cpp

./: .gitignore  ARCHITECTURE.md  ASH_ENGINE_SPEC.md  CMakeLists.txt  LICENSE  MCP_INTEGRATION.md  MODEL_LOADING.md  MODEL_STRATEGY.md  PERFORMANCE_BASELINE.md  README.md  test_gen.cpp
include/: attention.h  context_manager.h  decision_engine.h  emotional_state.h  event_loop.h  gguf_parser.h  inference.h  logger.h  matrix_ops.h  memory_lock.h  memory_store.h  model_loader.h  persona.h  scout_agent.h  tensor.h  tokenizer.h
src/: ash_cli.cpp  attention.cpp  attention_test.cpp  context_manager.cpp  context_test.cpp  decision_engine.cpp  decision_test.cpp  emotional_state.cpp  emotional_test.cpp  event_loop.cpp  gguf_parser.cpp  gguf_parser_test.cpp  inference.cpp  inference_test.cpp  logger.cpp  main.cpp  matrix_ops.cpp  matrix_ops_test.cpp  memory_lock.cpp  memory_lock_test.cpp  memory_store.cpp  memory_test.cpp  model_loader.cpp  model_test.cpp  multimodel_test.cpp  ollama_tokenizer.cpp  persona.cpp  persona_test.cpp  safetensors_parser.cpp  safetensors_parser.h  scout_agent.cpp  tensor.cpp  tensor_test.cpp  test_inference_safetensors.cpp  test_safetensors.cpp  tokenizer.cpp  tokenizer_test.cpp
